sidebar collapsed margin fix

--- a/src/assets/sass/partials/_sidebar.scss
+++ b/src/assets/sass/partials/_sidebar.scss
@@ -5,7 +5,7 @@ body {
     @include medium {
       margin-left: 250px;
       &.sidebar-collapsed {
-        margin-left: 120px;
+        margin-left: 100px;
         &.pianote {
           margin-left: 100px;
         }
